refactor: ajusta nomenclaturas, corrige depreciações e limpa avisos de lint no frontend