@@ -28,21 +28,16 @@ public class EmprestimoService {
 
     @Transactional
     public EmprestimoResponseDTO realizarEmprestimo(EmprestimoRequestDTO dto) {
-        log.info("Processando empréstimo: livro={}, usuario={}", dto.livroId(), dto.usuarioId());
+        log.info("Processando novo empréstimo. Livro: {}, Membro: {}", dto.livroId(), dto.usuarioId());
+
+        // Validação de disponibilidade via query otimizada (evita Race Conditions)
+        if (emprestimoRepository.existsByLivroIdAndStatus(dto.livroId(), StatusEmprestimo.ATIVO)) {
+            log.warn("Tentativa de empréstimo inválida: Livro {} já está alocado", dto.livroId());
+            throw new RuntimeException("Este livro já possui um empréstimo ativo.");
+        }
 
         Livro livro = livroService.buscarPorId(dto.livroId());
         Usuario usuario = usuarioService.buscarPorId(dto.usuarioId());
-
-        // Regra: Um livro só pode ter um empréstimo ATIVO por vez.
-        boolean livroOcupado = emprestimoRepository.findAll().stream()
-                .anyMatch(e -> e.getLivro().getId().equals(livro.getId())
-                        && e.getStatus() == StatusEmprestimo.ATIVO);
-
-        if (livroOcupado) {
-            log.warn("Livro ID {} já possui empréstimo ativo.", livro.getId());
-            // MENSAGEM EXATA PARA O TESTE PASSAR:
-            throw new RuntimeException("Este livro já possui um empréstimo ativo.");
-        }
 
         Emprestimo emprestimo = new Emprestimo();
         emprestimo.setUsuario(usuario);
@@ -56,38 +51,39 @@ public class EmprestimoService {
     @Transactional
     public EmprestimoResponseDTO devolverLivro(Long id) {
         Emprestimo emprestimo = emprestimoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Registro de empréstimo não localizado."));
+                .orElseThrow(() -> new RuntimeException("Registo de empréstimo não localizado."));
 
         if (StatusEmprestimo.DEVOLVIDO.equals(emprestimo.getStatus())) {
-            // MENSAGEM EXATA PARA O TESTE PASSAR:
             throw new RuntimeException("Este empréstimo já consta como devolvido no sistema.");
         }
 
         emprestimo.setDataDevolucao(LocalDate.now());
         emprestimo.setStatus(StatusEmprestimo.DEVOLVIDO);
 
-        log.info("Livro '{}' devolvido.", emprestimo.getLivro().getTitulo());
+        log.info("Devolução concluída para a obra: {}", emprestimo.getLivro().getTitulo());
         return EmprestimoResponseDTO.fromEntity(emprestimoRepository.save(emprestimo));
     }
 
     @Transactional(readOnly = true)
     public List<LivroResponseDTO> recomendarLivros(Long usuarioId) {
-        List<Emprestimo> historico = emprestimoRepository.findAll().stream()
-                .filter(e -> e.getUsuario().getId().equals(usuarioId))
-                .toList();
+        // Busca histórica otimizada
+        List<Emprestimo> historico = emprestimoRepository.findByUsuarioId(usuarioId);
 
-        Set<String> categoriasLidas = historico.stream()
+        Set<String> categorias = historico.stream()
                 .map(e -> e.getLivro().getCategoria())
                 .collect(Collectors.toSet());
 
-        Set<Long> idsLidos = historico.stream()
+        if (categorias.isEmpty()) {
+            return List.of();
+        }
+
+        Set<Long> jaLidos = historico.stream()
                 .map(e -> e.getLivro().getId())
                 .collect(Collectors.toSet());
 
-        return livroRepository.findAll().stream()
-                .filter(l -> categoriasLidas.contains(l.getCategoria()) && !idsLidos.contains(l.getId()))
+        return livroRepository.findByCategoriaInAndIdNotIn(categorias, jaLidos).stream()
                 .map(LivroResponseDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
